--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,8 @@ https://mybrandnewlogo.com/es/generador-de-paleta-de-colores
 	display: grid;
 	place-content: center;
 	margin-bottom: 1%;
-  }
+	
+}
 
 #img1 {
 	display: block;
@@ -19,31 +20,72 @@ https://mybrandnewlogo.com/es/generador-de-paleta-de-colores
 	margin-top: 2%;
 	margin-left: auto;
 	margin-right: auto;
-  }
+}
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Abel', sans-serif;
 }
 
+
 #root {
-	
+
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
 	gap: 40px;
 
 }
 
-#image{
-	text-align: center;
+#image {
 	background-color: #c3d7e8;
-	border-radius: 15px;
+	border-radius: 10px;
 }
 
-#photo{
+#card {
+	text-align: center;
+	background-color: #e4ebed;
+	border-radius: 15px;
+	border: 1px solid #2b91c8;
+	margin: 0% 10%;
+}
+
+#photo {
 	border-radius: 15px;
 	margin-bottom: 10px;
+	width: 100%;
+	height: auto;
+}
+
+.select-css {
+	display: inline;
+	font-size: 16px;
+	font-family: 'Arial', sans-serif;
+	font-weight: 400;
+	color: #444;
+	line-height: 1.3;
+	padding: .4em 1.4em .3em .8em;
+	width: 400px;
+	max-width: 100%;
+	box-sizing: border-box;
+	margin: 0;
+	border: 1px solid #aaa;
+	box-shadow: 0 1px 0 1px rgba(0, 0, 0, .03);
+	border-radius: .3em;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	cursor: pointer;
 }
 
 
+
+.select-css:hover {
+	border-color: #888;
+}
+
+form {
+	align-items: center;
+	text-align: center;
+}
