--- a/src/style.css
+++ b/src/style.css
@@ -6,86 +6,100 @@
 .color5 {color: #e4ebed;}
 https://mybrandnewlogo.com/es/generador-de-paleta-de-colores
 */
-.photo-container {
-	width: 100%;
-	display: grid;
-	place-content: center;
-	margin-bottom: 1%;
-	
-}
-
-#img1 {
-	display: block;
-	width: 80%;
-	margin-top: 2%;
-	margin-left: auto;
-	margin-right: auto;
-}
-
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-size: 20px;
+}
+
+body{
 	font-family: 'Abel', sans-serif;
 }
 
+.container{
+	background-image: linear-gradient(rgba(5, 10, 5, 0.80), rgba(90, 40, 90, 0.80)), url(imagenes/Fondo.jpg);
+	
+}
+.navbar {
+	background-color: #1E2838;
+	width: 100%;
+	margin: auto;
+	padding: 1rem 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-flow: wrap;
+	color: #e4ebed;
+}
+
+#logo {
+	display: flex;
+	width: 20%;	
+	margin: 0 1.25rem;
+}
+
+.navbar ul li{
+	list-style: none;
+	margin: 0 1.25rem;
+	font-size: 1.2rem;
+}
 
 #root {
-
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 	gap: 40px;
-
 }
 
 #image {
 	background-color: #c3d7e8;
-	border-radius: 10px;
+	border-radius: 0.625rem;
 }
 
 #card {
 	text-align: center;
 	background-color: #e4ebed;
-	border-radius: 15px;
+	border-radius: 1rem;
 	border: 1px solid #2b91c8;
 	margin: 0% 10%;
+	min-width: 200px;
 }
 
 #photo {
-	border-radius: 15px;
-	margin-bottom: 10px;
+	border-radius: 1rem;
+	margin-bottom: 0.625rem;
 	width: 100%;
 	height: auto;
+}
+
+.filter-elements {
+	
+	text-align: center;
+}
+
+#text-filtros{
+	color: #e4ebed;
 }
 
 .select-css {
 	display: inline;
 	font-size: 16px;
-	font-family: 'Arial', sans-serif;
 	font-weight: 400;
 	color: #444;
 	line-height: 1.3;
-	padding: .4em 1.4em .3em .8em;
-	width: 400px;
+	padding: 0.4em 1.4em 0.3em 0.8em;
+	width: 50%;
 	max-width: 100%;
 	box-sizing: border-box;
 	margin: 0;
 	border: 1px solid #aaa;
 	box-shadow: 0 1px 0 1px rgba(0, 0, 0, .03);
 	border-radius: .3em;
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	appearance: none;
 	cursor: pointer;
 }
-
-
 
 .select-css:hover {
 	border-color: #888;
 }
 
-form {
-	align-items: center;
-	text-align: center;
-}
