agregado filtro status y pruebas filterSpecies

--- a/src/style.css
+++ b/src/style.css
@@ -110,12 +110,12 @@ body{
 	border-color: #888;
 }
 
-table, th, td {
+/*table, th, td {
 	border: 1px solid rgb(243, 242, 242);
     border-collapse: collapse;
 	color: #ece5e5;
 }
 th, td {
 	border-color: #e4eaf3;
-  }
+  }*/
  
