--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ body{
 
 .container{
 	background-image: linear-gradient(rgba(5, 10, 5, 0.80), rgba(90, 40, 90, 0.80)), url(imagenes/Fondo.jpg);
+	
 }
 .navbar {
 	background-color: #1E2838;
@@ -37,8 +38,9 @@ body{
 	width: 20%;	
 	margin: 0 1.25rem;
 }
+
 .navbar ul button{
-	display: inline-flex;
+	display:inline-flex;
 	list-style: none;
 	margin: 0 1.25rem;
 	font-size: 1.2rem;
@@ -57,6 +59,9 @@ body{
 	flex-wrap: wrap;
 	justify-content: center;
 	gap: 40px;
+}
+#tittle{
+	font-size: 28px;
 }
 
 #image {
